# Ciri

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/ciri/metrics/: CounterBasic.h  CounterMinMax.h  CounterSum.h
include/ciri/streaming/: CountMinSketch.h
include/ciri/utils/: AlignedStorage.h  LinearHash.h
src/metrics/: counter.cpp  counter.h  counter_basic.cpp  counter_basic.h  counter_minmax.h  counter_sum.h
src/utils/: LinearHash.cpp
tests/: CMakeLists.txt  metrics.cpp  streaming.cpp  utils.cpp
tests/data/: setup.bash
